LU-3727 nfs: Fix ll_get_parent() LBUG caused by permission

When ll_get_parent() is trying to get the attributes of parent
directory, it will hit LBUG if NFS daemon user does not have the
execute permission of the child directory.

This patch fixes the problem by skipping permission check for
ll_get_parent().

Signed-off-by: Li Xi <lixi@ddn.com>
Change-Id: Id922d170c89519b755f69a2818d6ed53f8cc7ad9