lustre/mdt/mdt_handler.c
@@ -1176,7 +1176,7 @@ static int mdt_raw_lookup(struct mdt_thread_info *info,
                 repbody->fid1 = *child_fid;
                 repbody->valid = OBD_MD_FLID;
         }
-        RETURN(1);
+	RETURN(rc);
 }
 
 /*
@@ -1482,6 +1482,7 @@ int mdt_getattr_name(struct mdt_thread_info *info)
         struct mdt_lock_handle *lhc = &info->mti_lh[MDT_LH_CHILD];
         struct mdt_body        *reqbody;
         struct mdt_body        *repbody;
+	struct md_op_spec      *sp = &info->mti_spec;
         int rc, rc2;
         ENTRY;
 
@@ -1491,6 +1492,7 @@ int mdt_getattr_name(struct mdt_thread_info *info)
         LASSERT(repbody != NULL);
 
         info->mti_cross_ref = !!(reqbody->valid & OBD_MD_FLCROSSREF);
+	sp->sp_permitted = !!(reqbody->valid & OBD_MD_PERMITTED);
         repbody->eadatasize = 0;
         repbody->aclsize = 0;
 
